--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raw Material Stock - Dashboard</title>
-    <link rel="stylesheet" href="public/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body data-lang="en">
@@ -481,13 +481,13 @@
 
     <script src="/server/server.js"></script>
 
-    <script src="public/assets/js/translations/translations.js"></script>
-    <script src="public/assets/js/translations/pt-br.js"></script>
-    <script src="public/assets/js/translations/en.js"></script>
+    <script src="assets/js/translations/pt-br.js"></script>
+    <script src="assets/js/translations/en.js"></script>
+    <script src="assets/js/translations/translations.js"></script>
 
-    <script src="public/assets/js/api.js"></script>
-    <script src="public/assets/js/ui.js"></script>
-    <script src="public/assets/js/app.js"></script>
-    
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/ui.js"></script>
+
 </body>
 </html>
