feat: url conection

--- a/public/index.html
+++ b/public/index.html
@@ -479,7 +479,7 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
-    <script src="/server/server.js"></script>
+    <script src="/config.js"></script>
 
     <script src="assets/js/translations/pt-br.js"></script>
     <script src="assets/js/translations/en.js"></script>
